<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="hw1.pravallika.yanamadala.mortgagecalculator.MainActivity"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/principal"
            android:id="@+id/textView"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amtBorrowed"
            android:layout_weight="1"
            android:textSize="15dp"
            android:inputType="numberDecimal"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/interestrate"
            android:textSize="15dp"
            android:id="@+id/displayInterestRate" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="   5%"
            android:textSize="15dp"
            android:id="@+id/interestRate" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="0.0%"
            android:textSize="15dp"
            android:id="@+id/min"/>

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/seekBar"
            android:layout_weight="1"
            android:progress="50"
            android:max="100"
            android:textSize="15dp"
            android:indeterminate="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="10.0%   "
            android:textSize="15dp"
            android:id="@+id/max" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loanterm"
            android:textSize="15dp"
            android:id="@+id/textView3" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radiogrp"
            android:layout_gravity="fill">
            <RadioButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="7"
                android:textSize="15dp"
                android:id="@+id/radio1"
                android:layout_gravity="right"
                android:checked="true" />
            <RadioButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="15"
                android:textSize="15dp"
                android:id="@+id/radio2"
                android:layout_gravity="center_horizontal"
                android:checked="false" />
            <RadioButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="30"
                android:textSize="15dp"
                android:id="@+id/radio3"
                android:layout_gravity="center_horizontal"
                android:checked="true" />
        </RadioGroup>
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/taxes"
        android:textSize="15dp"
        android:id="@+id/taxes" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:textSize="15dp"
            android:id="@+id/button" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/payment"
            android:textSize="15dp"
            android:id="@+id/paymentLabel" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text=" "
            android:textSize="18dp"
            android:textColor="#0000ff"
            android:id="@+id/monthlyPayment" />
    </LinearLayout>

</LinearLayout>